--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "qiankun": "^2.6.3",
     "vite": "^2.8.4",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
